--- a/src/components/brandBar/styles.css
+++ b/src/components/brandBar/styles.css
@@ -2,9 +2,7 @@
     display: flex;
     align-items: center;
     min-height: 71px;
-    padding: 26px 0 0 0;
+    padding: 7px 0 0 0;
     background-color: #000;
+    overflow: hidden;
 }
-.brandbar-content {
-
-} 
