--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-
+    font-family: 'Anton', sans-serif;
+    font-family: 'Be Vietnam Pro', sans-serif;
+    font-family: 'Raleway', sans-serif;
  }
  .section {
     max-width: 1170px;
@@ -19,4 +21,7 @@
    height: 100%;
    object-fit: cover;
    width: 100%;
+}
+svg {
+   cursor: pointer;
 }
